--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
     "browserAction"
   ],
   "browser_action": {
-    "default_popup": "panel.html"
+    "default_popup": "drop-down-panel.html"
   },
   "icons": {
     "128": "favicon.png"
